fix selection alignmnent

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,13 @@
 .main-container {
-  border: 1px solid black;
   height: 100vh;
   width: 100vw;
 
 }
 
 .title-container {
-  border: 1px solid black;
   height: 5%;
   text-align: center;
+  margin: 1rem;
 }
 
 .content-container{
@@ -21,6 +20,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin: 1rem;
 }
 
 select {
@@ -47,5 +47,13 @@ select {
 
 img {
   height: 200px;
-  width: 200px;
+  width: 100%;
+}
+
+.links-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
